Arrow alignment fixes

--- a/site/_scss/blocks/_card-section.scss
+++ b/site/_scss/blocks/_card-section.scss
@@ -248,7 +248,7 @@ $chrome-100-colors: (
           @include media-query('md') {
             margin-top: 18px;
             position: absolute;
-            width: 100%;
+            width: 90%;
           }
 
           .tags {
